// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component pagination should call onPageChange prop on click on any page 1`] = `
.c8 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: initial;
  text-transform: uppercase;
}

.c19 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c28 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 600;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: center;
}

.c30 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: center;
}

.c32 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 700;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c10 {
  overflow: visible;
  font-size: 2rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c10 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c26 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c26 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c31 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c16 {
  display: block;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

.c0 {
  position: absolute;
  left: -1000px;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c1 {
  overflow: auto;
  display: block;
  border: 1px solid #C7D0D8;
  padding: 0;
  border-radius: 0.8rem;
  border-collapse: separate;
  border-spacing: 0;
  margin: 0;
}

.c1 *:not(svg) {
  box-sizing: border-box;
}

.c1::-webkit-scrollbar-thumb {
  border-radius: 1rem;
  background-color: #b0bcc8;
}

.c1::-webkit-scrollbar-corner {
  background: transparent;
}

.c1::-webkit-scrollbar {
  height: 0.5rem;
  width: 0.5rem;
}

.c1::-webkit-scrollbar-track:horizontal {
  background-color: transparent;
  border-top: 0.1rem solid #C7D0D8;
}

.c1::-webkit-scrollbar-track:vertical {
  background-color: transparent;
  border-left: 0.1rem solid #C7D0D8;
}

.c13 {
  display: grid;
  position: relative;
  opacity: 1;
  width: 100%;
  height: 100%;
}

.c14 {
  margin: 0;
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-transform: uppercase;
  position: relative;
  text-align: center;
  padding: 0.9rem 1.6rem 1rem;
  grid-column: -1/1;
  text-overflow: initial;
  overflow: auto;
  white-space: normal;
  color: #435465;
}

.c14::after {
  content: '';
  position: absolute;
  pointer-events: none;
  background-color: #C7D0D8;
  height: 1px;
  width: calc(100% - 3.2rem);
  left: 50%;
  bottom: 0;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c18 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  padding: 1.2rem 1.6rem;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c18 .c7 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.c20 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  padding: 1.2rem 1.6rem;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c20 .c7 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.c17 {
  display: grid;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  cursor: inherit;
}

.c17:hover {
  z-index: 2;
}

.c17:nth-child(odd),
.c17:nth-child(odd) > * {
  background-color: #F7F8F9;
  color: #13181D;
}

.c17:nth-child(even),
.c17:nth-child(even) > * {
  background-color: #ffffff;
  color: #13181D;
}

.c17:not(:last-child) {
  border-bottom: 1px solid #C7D0D8;
}

.c23 {
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c23 li {
  margin: 0 0.4rem;
}

.c23 li:last-child {
  margin-right: 0.8rem;
}

.c23 li:first-child {
  margin-left: 0.8rem;
}

.c24 > li {
  margin: 0;
}

.c27 {
  margin: 0.4rem;
  height: 3.2rem;
  width: 3.2rem;
  display: block;
  border-radius: 50%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: none;
  padding: 0;
  text-align: center;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
  color: #435465;
  background: #ffffff;
}

.c27:hover {
  cursor: pointer;
}

.c27:focus {
  outline: none;
}

.c27:disabled {
  cursor: not-allowed;
}

.c27:hover {
  color: #303C48;
  background: #F7F8F9;
}

.c27:active {
  font-weight: 700;
  color: #13181D;
  background: #eff2f4;
}

.c29 {
  margin: 0.4rem;
  height: 3.2rem;
  width: 3.2rem;
  display: block;
  border-radius: 50%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: none;
  padding: 0;
  text-align: center;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
  color: #126AFA;
  background: #E7F0FF;
}

.c29:hover {
  cursor: pointer;
}

.c29:focus {
  outline: none;
}

.c29:disabled {
  cursor: not-allowed;
}

.c29:active {
  font-weight: 700;
  color: #13181D;
  background: #eff2f4;
}

.c25 {
  margin: 0.4rem;
  height: 3.2rem;
  width: 3.2rem;
  display: block;
  border-radius: 50%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: none;
  padding: 0;
  text-align: center;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
  background: #ffffff;
}

.c25:hover {
  cursor: pointer;
}

.c25:focus {
  outline: none;
}

.c25:disabled {
  cursor: not-allowed;
}

.c25 > .c9,
.c25 .c9 {
  padding: 0.4rem;
}

.c25 .c9 * {
  fill: #435465;
}

.c25:disabled {
  background: #ffffff;
}

.c25:disabled .c9 * {
  fill: #C7D0D8;
}

.c25:not(:disabled):hover {
  background: #F7F8F9;
}

.c25:not(:disabled):hover .c9 * {
  fill: #303C48;
}

.c25:not(:disabled):active {
  background: #eff2f4;
}

.c25:not(:disabled):active .c9 * {
  fill: #13181D;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: -webkit-sticky;
  position: sticky;
  left: 0;
  background-color: #ffffff;
  min-height: 4.8rem;
  border-top: 0.1rem solid #C7D0D8;
}

.c22 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0 1.6rem 0 0.8rem;
}

.c22 td > .c7 {
  line-height: 2rem;
  font-size: 1.2rem;
}

.c2 {
  display: block;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 3;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

.c5 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  opacity: 1;
  position: relative;
  padding: 0.8rem;
}

.c5:not(:last-child)::after {
  content: '';
  position: absolute;
  pointer-events: none;
  background-color: #C7D0D8;
  height: calc(100% - 3.2rem);
  width: 1px;
  right: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c5 .sc-fzoXzr {
  padding: 0;
}

.c11 {
  margin: 0;
  padding: 0;
  width: 0.3rem;
  height: 100%;
  top: 0;
  right: 0;
  cursor: ew-resize;
  position: absolute;
}

.c6 {
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 0.9rem 0.8rem 1.1rem;
  outline: unset;
  font-family: inherit;
  border-radius: 0.8rem;
  cursor: pointer;
  background-color: #ffffff;
  color: #435465;
}

.c6 .c9 * {
  fill: #435465;
}

.c6:hover {
  background-color: #F7F8F9;
  color: #303C48;
}

.c6:hover .c9 * {
  fill: #303C48;
}

.c6:active {
  background-color: #eff2f4;
  color: #13181D;
}

.c6:active .c9 * {
  fill: #13181D;
}

.c6 .c7 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  text-align: center;
}

.c6 .c9 {
  margin-left: 0.4rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c15 {
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 0.9rem 0.8rem 1.1rem;
  outline: unset;
  font-family: inherit;
  border-radius: 0.8rem;
  cursor: pointer;
  background-color: #ffffff;
  color: #435465;
}

.c15 .c9 * {
  fill: #435465;
}

.c15:hover {
  background-color: #F7F8F9;
  color: #303C48;
}

.c15:hover .c9 * {
  fill: #303C48;
}

.c15:active {
  background-color: #eff2f4;
  color: #13181D;
}

.c15:active .c9 * {
  fill: #13181D;
}

.c15 .c7 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  text-align: center;
}

.c15 .c9 {
  margin-left: 0.4rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c3 {
  display: grid;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 > * {
  background-color: #ffffff;
  border-bottom: 1px solid #C7D0D8;
}

.c3 .c12 + .c12::before,
.c3 .c12 + .c4::before {
  content: '';
  position: absolute;
  pointer-events: none;
  background-color: #C7D0D8;
  height: calc(100% - 3.2rem);
  width: 1px;
  left: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

<div>
  <div
    class="c0"
  >
    4
  </div>
  <table
    class="c1"
  >
    <thead
      class="c2"
    >
      <tr
        class="c3"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <th
          class="c4 c5"
        >
          <button
            class="c6"
          >
            <h5
              class="c7 c8"
            >
              Name
            </h5>
            <svg
              class="c9 c10"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c11"
          />
        </th>
        <th
          class="c12 c13"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <span
            class="c7 c14"
          >
            Marks
          </span>
          <div
            class="c4 c5"
          >
            <button
              class="c15"
            >
              <h5
                class="c7 c8"
              >
                Maths
              </h5>
              <svg
                class="c9 c10"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                  fill="#435465"
                />
              </svg>
            </button>
            <span
              class="c11"
            />
          </div>
          <div
            class="c4 c5"
          >
            <button
              class="c15"
            >
              <h5
                class="c7 c8"
              >
                Science
              </h5>
              <svg
                class="c9 c10"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                  fill="#435465"
                />
              </svg>
            </button>
            <span
              class="c11"
            />
          </div>
        </th>
        <th
          class="c4 c5"
        >
          <button
            class="c15"
          >
            <h5
              class="c7 c8"
            >
              Age
            </h5>
            <svg
              class="c9 c10"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c11"
          />
        </th>
        <th
          class="c4 c5"
        >
          <button
            class="c6"
          >
            <h5
              class="c7 c8"
            >
              Passed
            </h5>
            <svg
              class="c9 c10"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c11"
          />
        </th>
        <th
          class="c4 c5"
        >
          <button
            class="c15"
          >
            <h5
              class="c7 c8"
            >
              Rating
            </h5>
            <svg
              class="c9 c10"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c11"
          />
        </th>
      </tr>
    </thead>
    <tbody
      class="c16"
    >
      <tr
        class="c17"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="Oli Bob asfdakhf alsfkjh asdfalskj  asdasdkj  fasdkj  asldfkj ljlaskdfj"
          >
            Oli Bob asfdakhf alsfkjh asdfalskj  asdasdkj  fasdkj  asldfkj ljlaskdfj
          </span>
        </td>
        <td
          class="c12 c13"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="6"
            >
              6
            </span>
          </div>
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="4"
            >
              4
            </span>
          </div>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="12"
          >
            12
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="5"
          >
            5
          </span>
        </td>
      </tr>
      <tr
        class="c17"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="Mary May"
          >
            Mary May
          </span>
        </td>
        <td
          class="c12 c13"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="4"
            >
              4
            </span>
          </div>
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="7"
            >
              7
            </span>
          </div>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="1"
          >
            1
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
      <tr
        class="c17"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="Christine Lobowski"
          >
            Christine Lobowski
          </span>
        </td>
        <td
          class="c12 c13"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="4"
            >
              4
            </span>
          </div>
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="7"
            >
              7
            </span>
          </div>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="42"
          >
            42
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
      <tr
        class="c17"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="Brendon Philips"
          >
            Brendon Philips
          </span>
        </td>
        <td
          class="c12 c13"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="10"
            >
              10
            </span>
          </div>
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="2"
            >
              2
            </span>
          </div>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="125"
          >
            125
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="4.5"
          >
            4.5
          </span>
        </td>
      </tr>
      <tr
        class="c17"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="Margret Marmajuke"
          >
            Margret Marmajuke
          </span>
        </td>
        <td
          class="c12 c13"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="7"
            >
              7
            </span>
          </div>
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="5"
            >
              5
            </span>
          </div>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="16"
          >
            16
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
      <tr
        class="c17"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="Van Ng"
          >
            Van Ng
          </span>
        </td>
        <td
          class="c12 c13"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="9"
            >
              9
            </span>
          </div>
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="2"
            >
              2
            </span>
          </div>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="37"
          >
            37
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="No"
          >
            No
          </span>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
      <tr
        class="c17"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="Duc Ng"
          >
            Duc Ng
          </span>
        </td>
        <td
          class="c12 c13"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="10"
            >
              10
            </span>
          </div>
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="3"
            >
              3
            </span>
          </div>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="37"
          >
            37
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="No"
          >
            No
          </span>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c21"
    >
      <tr
        class="c22"
      >
        <td>
          <ul
            class="c23 c24"
          >
            <li>
              <button
                class="sc-fzqPZZ c25"
                type="button"
              >
                <svg
                  class="c9 c26"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 6.705a.996.996 0 0 0-1.41 0L9 11.295a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41l-3.88-3.89L15 8.115c.39-.39.38-1.03 0-1.41z"
                    fill="#000"
                    fill-opacity=".54"
                  />
                </svg>
              </button>
            </li>
            <li>
              <button
                class="sc-fzqPZZ c27"
                type="button"
              >
                <h5
                  class="c7 c28"
                >
                  1
                </h5>
              </button>
            </li>
            <li>
              <button
                class="sc-fzqPZZ c29"
                type="button"
              >
                <h5
                  class="c7 c30"
                >
                  2
                </h5>
              </button>
            </li>
            <li>
              <button
                class="sc-fzqPZZ c27"
                type="button"
              >
                <h5
                  class="c7 c28"
                >
                  3
                </h5>
              </button>
            </li>
            <li>
              <div
                class="c31"
                id="medly-popover-wrapper"
              >
                <button
                  class="sc-fzqPZZ c27"
                  type="button"
                >
                  <h5
                    class="c7 c28"
                  >
                    ...
                  </h5>
                </button>
              </div>
            </li>
            <li>
              <button
                class="sc-fzqPZZ c27"
                type="button"
              >
                <h5
                  class="c7 c28"
                >
                  30
                </h5>
              </button>
            </li>
            <li>
              <button
                class="sc-fzqPZZ c25"
                type="button"
              >
                <svg
                  class="c9 c26"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9 6.71a.996.996 0 0 0 0 1.41L12.88 12 9 15.88a.996.996 0 1 0 1.41 1.41L15 12.7a.996.996 0 0 0 0-1.41L10.41 6.7c-.38-.38-1.02-.38-1.41.01z"
                    fill="#000"
                    fill-opacity=".54"
                  />
                </svg>
              </button>
            </li>
          </ul>
        </td>
        <td>
          <span
            class="c7 c19"
          >
            Viewing
          </span>
          <strong
            class="c7 c32"
          >
             11 - 20 
          </strong>
          <span
            class="c7 c19"
          >
            of
          </span>
          <strong
            class="c7 c32"
          >
             300 
          </strong>
          <span
            class="c7 c19"
          >
            Results
          </span>
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component should render properly 1`] = `
.c8 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: initial;
  text-transform: uppercase;
}

.c19 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c10 {
  overflow: visible;
  font-size: 2rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c10 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c16 {
  display: block;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

.c0 {
  position: absolute;
  left: -1000px;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c1 {
  overflow: auto;
  display: block;
  border: 1px solid #C7D0D8;
  padding: 0;
  border-radius: 0.8rem;
  border-collapse: separate;
  border-spacing: 0;
  margin: 0;
}

.c1 *:not(svg) {
  box-sizing: border-box;
}

.c1::-webkit-scrollbar-thumb {
  border-radius: 1rem;
  background-color: #b0bcc8;
}

.c1::-webkit-scrollbar-corner {
  background: transparent;
}

.c1::-webkit-scrollbar {
  height: 0.5rem;
  width: 0.5rem;
}

.c1::-webkit-scrollbar-track:horizontal {
  background-color: transparent;
  border-top: 0.1rem solid #C7D0D8;
}

.c1::-webkit-scrollbar-track:vertical {
  background-color: transparent;
  border-left: 0.1rem solid #C7D0D8;
}

.c13 {
  display: grid;
  position: relative;
  opacity: 1;
  width: 100%;
  height: 100%;
}

.c14 {
  margin: 0;
  font-size: 1.2rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.12rem;
  -moz-letter-spacing: 0.12rem;
  -ms-letter-spacing: 0.12rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-transform: uppercase;
  position: relative;
  text-align: center;
  padding: 0.9rem 1.6rem 1rem;
  grid-column: -1/1;
  text-overflow: initial;
  overflow: auto;
  white-space: normal;
  color: #435465;
}

.c14::after {
  content: '';
  position: absolute;
  pointer-events: none;
  background-color: #C7D0D8;
  height: 1px;
  width: calc(100% - 3.2rem);
  left: 50%;
  bottom: 0;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c18 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  padding: 1.2rem 1.6rem;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c18 .c7 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.c20 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  padding: 1.2rem 1.6rem;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c20 .c7 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.c17 {
  display: grid;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  cursor: inherit;
}

.c17:hover {
  z-index: 2;
}

.c17:nth-child(odd),
.c17:nth-child(odd) > * {
  background-color: #F7F8F9;
  color: #13181D;
}

.c17:nth-child(even),
.c17:nth-child(even) > * {
  background-color: #ffffff;
  color: #13181D;
}

.c17:not(:last-child) {
  border-bottom: 1px solid #C7D0D8;
}

.c2 {
  display: block;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 3;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

.c5 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  opacity: 1;
  position: relative;
  padding: 0.8rem;
}

.c5:not(:last-child)::after {
  content: '';
  position: absolute;
  pointer-events: none;
  background-color: #C7D0D8;
  height: calc(100% - 3.2rem);
  width: 1px;
  right: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c5 .sc-fzoXzr {
  padding: 0;
}

.c11 {
  margin: 0;
  padding: 0;
  width: 0.3rem;
  height: 100%;
  top: 0;
  right: 0;
  cursor: ew-resize;
  position: absolute;
}

.c6 {
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 0.9rem 0.8rem 1.1rem;
  outline: unset;
  font-family: inherit;
  border-radius: 0.8rem;
  cursor: pointer;
  background-color: #ffffff;
  color: #435465;
}

.c6 .c9 * {
  fill: #435465;
}

.c6:hover {
  background-color: #F7F8F9;
  color: #303C48;
}

.c6:hover .c9 * {
  fill: #303C48;
}

.c6:active {
  background-color: #eff2f4;
  color: #13181D;
}

.c6:active .c9 * {
  fill: #13181D;
}

.c6 .c7 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  text-align: center;
}

.c6 .c9 {
  margin-left: 0.4rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c15 {
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 0.9rem 0.8rem 1.1rem;
  outline: unset;
  font-family: inherit;
  border-radius: 0.8rem;
  cursor: pointer;
  background-color: #ffffff;
  color: #435465;
}

.c15 .c9 * {
  fill: #435465;
}

.c15:hover {
  background-color: #F7F8F9;
  color: #303C48;
}

.c15:hover .c9 * {
  fill: #303C48;
}

.c15:active {
  background-color: #eff2f4;
  color: #13181D;
}

.c15:active .c9 * {
  fill: #13181D;
}

.c15 .c7 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  text-align: center;
}

.c15 .c9 {
  margin-left: 0.4rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c3 {
  display: grid;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 > * {
  background-color: #ffffff;
  border-bottom: 1px solid #C7D0D8;
}

.c3 .c12 + .c12::before,
.c3 .c12 + .c4::before {
  content: '';
  position: absolute;
  pointer-events: none;
  background-color: #C7D0D8;
  height: calc(100% - 3.2rem);
  width: 1px;
  left: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

<div>
  <div
    class="c0"
  >
    4
  </div>
  <table
    class="c1"
  >
    <thead
      class="c2"
    >
      <tr
        class="c3"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <th
          class="c4 c5"
        >
          <button
            class="c6"
          >
            <h5
              class="c7 c8"
            >
              Name
            </h5>
            <svg
              class="c9 c10"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c11"
          />
        </th>
        <th
          class="c12 c13"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <span
            class="c7 c14"
          >
            Marks
          </span>
          <div
            class="c4 c5"
          >
            <button
              class="c15"
            >
              <h5
                class="c7 c8"
              >
                Maths
              </h5>
              <svg
                class="c9 c10"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                  fill="#435465"
                />
              </svg>
            </button>
            <span
              class="c11"
            />
          </div>
          <div
            class="c4 c5"
          >
            <button
              class="c15"
            >
              <h5
                class="c7 c8"
              >
                Science
              </h5>
              <svg
                class="c9 c10"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                  fill="#435465"
                />
              </svg>
            </button>
            <span
              class="c11"
            />
          </div>
        </th>
        <th
          class="c4 c5"
        >
          <button
            class="c15"
          >
            <h5
              class="c7 c8"
            >
              Age
            </h5>
            <svg
              class="c9 c10"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c11"
          />
        </th>
        <th
          class="c4 c5"
        >
          <button
            class="c6"
          >
            <h5
              class="c7 c8"
            >
              Passed
            </h5>
            <svg
              class="c9 c10"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c11"
          />
        </th>
        <th
          class="c4 c5"
        >
          <button
            class="c15"
          >
            <h5
              class="c7 c8"
            >
              Rating
            </h5>
            <svg
              class="c9 c10"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </button>
          <span
            class="c11"
          />
        </th>
      </tr>
    </thead>
    <tbody
      class="c16"
    >
      <tr
        class="c17"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="Oli Bob asfdakhf alsfkjh asdfalskj  asdasdkj  fasdkj  asldfkj ljlaskdfj"
          >
            Oli Bob asfdakhf alsfkjh asdfalskj  asdasdkj  fasdkj  asldfkj ljlaskdfj
          </span>
        </td>
        <td
          class="c12 c13"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="6"
            >
              6
            </span>
          </div>
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="4"
            >
              4
            </span>
          </div>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="12"
          >
            12
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="5"
          >
            5
          </span>
        </td>
      </tr>
      <tr
        class="c17"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="Mary May"
          >
            Mary May
          </span>
        </td>
        <td
          class="c12 c13"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="4"
            >
              4
            </span>
          </div>
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="7"
            >
              7
            </span>
          </div>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="1"
          >
            1
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
      <tr
        class="c17"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="Christine Lobowski"
          >
            Christine Lobowski
          </span>
        </td>
        <td
          class="c12 c13"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="4"
            >
              4
            </span>
          </div>
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="7"
            >
              7
            </span>
          </div>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="42"
          >
            42
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
      <tr
        class="c17"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="Brendon Philips"
          >
            Brendon Philips
          </span>
        </td>
        <td
          class="c12 c13"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="10"
            >
              10
            </span>
          </div>
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="2"
            >
              2
            </span>
          </div>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="125"
          >
            125
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="4.5"
          >
            4.5
          </span>
        </td>
      </tr>
      <tr
        class="c17"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="Margret Marmajuke"
          >
            Margret Marmajuke
          </span>
        </td>
        <td
          class="c12 c13"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="7"
            >
              7
            </span>
          </div>
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="5"
            >
              5
            </span>
          </div>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="16"
          >
            16
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="Yes"
          >
            Yes
          </span>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
      <tr
        class="c17"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="Van Ng"
          >
            Van Ng
          </span>
        </td>
        <td
          class="c12 c13"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="9"
            >
              9
            </span>
          </div>
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="2"
            >
              2
            </span>
          </div>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="37"
          >
            37
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="No"
          >
            No
          </span>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
      <tr
        class="c17"
        style="grid-template-columns: minmax(100px, 2fr) minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);"
      >
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="Duc Ng"
          >
            Duc Ng
          </span>
        </td>
        <td
          class="c12 c13"
          style="grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);"
        >
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="10"
            >
              10
            </span>
          </div>
          <div
            class="c20"
          >
            <span
              class="c7 c19"
              title="3"
            >
              3
            </span>
          </div>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="37"
          >
            37
          </span>
        </td>
        <td
          class="c18"
        >
          <span
            class="c7 c19"
            title="No"
          >
            No
          </span>
        </td>
        <td
          class="c20"
        >
          <span
            class="c7 c19"
            title="4"
          >
            4
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
